-added padding to footer logo on small screen added styles to fix section titles text align on mobile

--- a/assets/critical.css
+++ b/assets/critical.css
@@ -229,6 +229,13 @@ body {
 .section-title {
   color: var(--grey);
 }
+/* RESPONSIVE MQ 
+Aligns titles to center */
+@media screen and (max-width: 640px) {
+  .section-title {
+    text-align: center;
+  }
+}
 
 /* Product Grid */
 
