--- a/assets/styles.css
+++ b/assets/styles.css
@@ -353,8 +353,9 @@
 }
 
 /* Featured Products */
-.featured-products {
-}
+/* .featured-products {
+} */
+shopify theme push
 
 /* CTAs */
 .Hero-ctas {
